# auto-depreciation

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  README.md  auto_depreciation.py  auto_depreciation_test.py  index.html  mkdocs.yml  pyproject.toml  readthedocs.yml  sitemap.xml  versions.json
.github/: pull_request_template.md
.github/workflow/: build_and_test.yml
.github/workflows/: build_and_test.yml  publish.yml
3.0/: index.html  sitemap.xml
3.0/search/: search_index.json
3.1/: index.html  sitemap.xml
3.1/methods/: index.html
3.1/search/: search_index.json
auto_depreciation/: __init__.py  depreciation.py
develop/: 404.html  index.html  sitemap.xml
develop/CONTRIBUTING/: index.html
develop/methods/: index.html
develop/search/: search_index.json
docs/: CONTRIBUTING.md  README.md  index.md  methods.md  requirements.txt
latest/methods/: index.html
methods/: index.html
search/: search_index.json
test/: test_depreciation.py
tests/: test_depreciation.py
