[tool.poetry]
name = "auto-depreciation"
version = "3.0.0"
description = "Beancount plugin for fixed assets depreciation"
authors = ["hktkzyx <hktkzyx@yeah.net>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
python-dateutil = "^2.8.2"
beancount = "^2.3.5"
flake8 = {version = "^4.0.1", optional = true}
yapf = {version = ">=0.32.0, <1.0.0", optional = true}
commitizen = {version = "^2.21.2", optional = true}
pre-commit = {version = "^2.17.0", optional = true}
isort = {version = "^5.10.1", optional = true}

[tool.poetry.dev-dependencies]
mkdocs = "^1.2.3"
mkdocs-material = "^8.2.1"
mike = "^1.1.2"

[tool.poetry.extras]
dev-tools = ["flake8", "yapf", "commitizen", "pre-commit", "isort"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "3.0.0"
version_files = ["pyproject.toml:version"]
tag_format = "v$version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "google"

[tool.yapf]
based_on_style = "pep8"
split_before_arithmetic_operator = true
split_before_named_assigns = false
indent_dictionary_value = true
split_all_top_level_comma_separated_values = true
